[shell-release]release version 3.0.0